data/derived/comb/progs/unify/prog5262.ml.out
Characters 114-116:
  | Sine e	      -> (int_of_float) (sin(pi * eval e))
                                        ^^
Error: This expression has type float but an expression was expected of type
         int
